SimpleDatabase.Parsing/Antlr/SQLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\will\Source\Repos\SimpleDatabase\SimpleDatabase.Parsing\Antlr\SQL.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace SimpleDatabase.Parsing.Antlr {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class SQLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		K_AS=10, K_ASC=11, K_BY=12, K_DELETE=13, K_DESC=14, K_EXPLAIN=15, K_FROM=16, 
		K_INSERT=17, K_INTO=18, K_ORDER=19, K_SELECT=20, K_VALUES=21, K_WHERE=22, 
		IDENTIFIER=23, NUMBER_LITERAL=24, STRING_LITERAL=25, WS=26;
	public const int
		RULE_program = 0, RULE_statement = 1, RULE_statement_select = 2, RULE_statement_insert = 3, 
		RULE_statement_insert_value = 4, RULE_statement_delete = 5, RULE_result_column = 6, 
		RULE_column_alias = 7, RULE_column_name = 8, RULE_ordering_term = 9, RULE_table_name = 10, 
		RULE_expression = 11, RULE_literal_value = 12;
	public static readonly string[] ruleNames = {
		"program", "statement", "statement_select", "statement_insert", "statement_insert_value", 
		"statement_delete", "result_column", "column_alias", "column_name", "ordering_term", 
		"table_name", "expression", "literal_value"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "','", "'('", "')'", "'.'", "'*'", "'='", "'=='", "'!='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, "K_AS", "K_ASC", 
		"K_BY", "K_DELETE", "K_DESC", "K_EXPLAIN", "K_FROM", "K_INSERT", "K_INTO", 
		"K_ORDER", "K_SELECT", "K_VALUES", "K_WHERE", "IDENTIFIER", "NUMBER_LITERAL", 
		"STRING_LITERAL", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SQL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static SQLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SQLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SQLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ProgramContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISQLVisitor<TResult> typedVisitor = visitor as ISQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 26; statement();
			State = 31;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 27; Match(T__0);
					State = 28; statement();
					}
					} 
				}
				State = 33;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 35;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__0) {
				{
				State = 34; Match(T__0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public Statement_selectContext statement_select() {
			return GetRuleContext<Statement_selectContext>(0);
		}
		public Statement_insertContext statement_insert() {
			return GetRuleContext<Statement_insertContext>(0);
		}
		public Statement_deleteContext statement_delete() {
			return GetRuleContext<Statement_deleteContext>(0);
		}
		public ITerminalNode K_EXPLAIN() { return GetToken(SQLParser.K_EXPLAIN, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISQLVisitor<TResult> typedVisitor = visitor as ISQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 38;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==K_EXPLAIN) {
				{
				State = 37; Match(K_EXPLAIN);
				}
			}

			State = 43;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case K_SELECT:
				{
				State = 40; statement_select();
				}
				break;
			case K_INSERT:
				{
				State = 41; statement_insert();
				}
				break;
			case K_DELETE:
				{
				State = 42; statement_delete();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Statement_selectContext : ParserRuleContext {
		public Result_columnContext _result_column;
		public IList<Result_columnContext> _Columns = new List<Result_columnContext>();
		public Table_nameContext Table;
		public ExpressionContext Where;
		public Ordering_termContext _ordering_term;
		public IList<Ordering_termContext> _Ordering = new List<Ordering_termContext>();
		public ITerminalNode K_SELECT() { return GetToken(SQLParser.K_SELECT, 0); }
		public ITerminalNode K_FROM() { return GetToken(SQLParser.K_FROM, 0); }
		public Result_columnContext[] result_column() {
			return GetRuleContexts<Result_columnContext>();
		}
		public Result_columnContext result_column(int i) {
			return GetRuleContext<Result_columnContext>(i);
		}
		public Table_nameContext table_name() {
			return GetRuleContext<Table_nameContext>(0);
		}
		public ITerminalNode K_WHERE() { return GetToken(SQLParser.K_WHERE, 0); }
		public ITerminalNode K_ORDER() { return GetToken(SQLParser.K_ORDER, 0); }
		public ITerminalNode K_BY() { return GetToken(SQLParser.K_BY, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public Ordering_termContext[] ordering_term() {
			return GetRuleContexts<Ordering_termContext>();
		}
		public Ordering_termContext ordering_term(int i) {
			return GetRuleContext<Ordering_termContext>(i);
		}
		public Statement_selectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement_select; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISQLVisitor<TResult> typedVisitor = visitor as ISQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement_select(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Statement_selectContext statement_select() {
		Statement_selectContext _localctx = new Statement_selectContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement_select);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45; Match(K_SELECT);
			State = 46; _localctx._result_column = result_column();
			_localctx._Columns.Add(_localctx._result_column);
			State = 51;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__1) {
				{
				{
				State = 47; Match(T__1);
				State = 48; _localctx._result_column = result_column();
				_localctx._Columns.Add(_localctx._result_column);
				}
				}
				State = 53;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 54; Match(K_FROM);
			State = 55; _localctx.Table = table_name();
			State = 58;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==K_WHERE) {
				{
				State = 56; Match(K_WHERE);
				State = 57; _localctx.Where = expression(0);
				}
			}

			State = 70;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==K_ORDER) {
				{
				State = 60; Match(K_ORDER);
				State = 61; Match(K_BY);
				State = 62; _localctx._ordering_term = ordering_term();
				_localctx._Ordering.Add(_localctx._ordering_term);
				State = 67;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__1) {
					{
					{
					State = 63; Match(T__1);
					State = 64; _localctx._ordering_term = ordering_term();
					_localctx._Ordering.Add(_localctx._ordering_term);
					}
					}
					State = 69;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Statement_insertContext : ParserRuleContext {
		public Table_nameContext Table;
		public Column_nameContext _column_name;
		public IList<Column_nameContext> _Columns = new List<Column_nameContext>();
		public Statement_insert_valueContext _statement_insert_value;
		public IList<Statement_insert_valueContext> _Values = new List<Statement_insert_valueContext>();
		public ITerminalNode K_INSERT() { return GetToken(SQLParser.K_INSERT, 0); }
		public ITerminalNode K_INTO() { return GetToken(SQLParser.K_INTO, 0); }
		public ITerminalNode K_VALUES() { return GetToken(SQLParser.K_VALUES, 0); }
		public Table_nameContext table_name() {
			return GetRuleContext<Table_nameContext>(0);
		}
		public Statement_insert_valueContext[] statement_insert_value() {
			return GetRuleContexts<Statement_insert_valueContext>();
		}
		public Statement_insert_valueContext statement_insert_value(int i) {
			return GetRuleContext<Statement_insert_valueContext>(i);
		}
		public Column_nameContext[] column_name() {
			return GetRuleContexts<Column_nameContext>();
		}
		public Column_nameContext column_name(int i) {
			return GetRuleContext<Column_nameContext>(i);
		}
		public Statement_insertContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement_insert; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISQLVisitor<TResult> typedVisitor = visitor as ISQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement_insert(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Statement_insertContext statement_insert() {
		Statement_insertContext _localctx = new Statement_insertContext(Context, State);
		EnterRule(_localctx, 6, RULE_statement_insert);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72; Match(K_INSERT);
			State = 73; Match(K_INTO);
			State = 74; _localctx.Table = table_name();
			State = 86;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__2) {
				{
				State = 75; Match(T__2);
				State = 76; _localctx._column_name = column_name();
				_localctx._Columns.Add(_localctx._column_name);
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__1) {
					{
					{
					State = 77; Match(T__1);
					State = 78; _localctx._column_name = column_name();
					_localctx._Columns.Add(_localctx._column_name);
					}
					}
					State = 83;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 84; Match(T__3);
				}
			}

			State = 88; Match(K_VALUES);
			State = 89; _localctx._statement_insert_value = statement_insert_value();
			_localctx._Values.Add(_localctx._statement_insert_value);
			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__1) {
				{
				{
				State = 90; Match(T__1);
				State = 91; _localctx._statement_insert_value = statement_insert_value();
				_localctx._Values.Add(_localctx._statement_insert_value);
				}
				}
				State = 96;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Statement_insert_valueContext : ParserRuleContext {
		public ExpressionContext _expression;
		public IList<ExpressionContext> _Values = new List<ExpressionContext>();
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public Statement_insert_valueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement_insert_value; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISQLVisitor<TResult> typedVisitor = visitor as ISQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement_insert_value(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Statement_insert_valueContext statement_insert_value() {
		Statement_insert_valueContext _localctx = new Statement_insert_valueContext(Context, State);
		EnterRule(_localctx, 8, RULE_statement_insert_value);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; Match(T__2);
			State = 98; _localctx._expression = expression(0);
			_localctx._Values.Add(_localctx._expression);
			State = 103;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__1) {
				{
				{
				State = 99; Match(T__1);
				State = 100; _localctx._expression = expression(0);
				_localctx._Values.Add(_localctx._expression);
				}
				}
				State = 105;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 106; Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Statement_deleteContext : ParserRuleContext {
		public Table_nameContext Table;
		public ExpressionContext Where;
		public ITerminalNode K_DELETE() { return GetToken(SQLParser.K_DELETE, 0); }
		public ITerminalNode K_FROM() { return GetToken(SQLParser.K_FROM, 0); }
		public Table_nameContext table_name() {
			return GetRuleContext<Table_nameContext>(0);
		}
		public ITerminalNode K_WHERE() { return GetToken(SQLParser.K_WHERE, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public Statement_deleteContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement_delete; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISQLVisitor<TResult> typedVisitor = visitor as ISQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement_delete(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Statement_deleteContext statement_delete() {
		Statement_deleteContext _localctx = new Statement_deleteContext(Context, State);
		EnterRule(_localctx, 10, RULE_statement_delete);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108; Match(K_DELETE);
			State = 109; Match(K_FROM);
			State = 110; _localctx.Table = table_name();
			State = 113;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==K_WHERE) {
				{
				State = 111; Match(K_WHERE);
				State = 112; _localctx.Where = expression(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Result_columnContext : ParserRuleContext {
		public Result_columnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_result_column; } }
	 
		public Result_columnContext() { }
		public virtual void CopyFrom(Result_columnContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Result_column_exprContext : Result_columnContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public Column_aliasContext column_alias() {
			return GetRuleContext<Column_aliasContext>(0);
		}
		public ITerminalNode K_AS() { return GetToken(SQLParser.K_AS, 0); }
		public Result_column_exprContext(Result_columnContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISQLVisitor<TResult> typedVisitor = visitor as ISQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitResult_column_expr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Result_column_starContext : Result_columnContext {
		public Table_nameContext table_name() {
			return GetRuleContext<Table_nameContext>(0);
		}
		public Result_column_starContext(Result_columnContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISQLVisitor<TResult> typedVisitor = visitor as ISQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitResult_column_star(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Result_columnContext result_column() {
		Result_columnContext _localctx = new Result_columnContext(Context, State);
		EnterRule(_localctx, 12, RULE_result_column);
		int _la;
		try {
			State = 128;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,16,Context) ) {
			case 1:
				_localctx = new Result_column_starContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 118;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==IDENTIFIER) {
					{
					State = 115; table_name();
					State = 116; Match(T__4);
					}
				}

				State = 120; Match(T__5);
				}
				break;
			case 2:
				_localctx = new Result_column_exprContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 121; expression(0);
				State = 126;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==K_AS || _la==IDENTIFIER) {
					{
					State = 123;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if (_la==K_AS) {
						{
						State = 122; Match(K_AS);
						}
					}

					State = 125; column_alias();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Column_aliasContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(SQLParser.IDENTIFIER, 0); }
		public Column_aliasContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_column_alias; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISQLVisitor<TResult> typedVisitor = visitor as ISQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitColumn_alias(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Column_aliasContext column_alias() {
		Column_aliasContext _localctx = new Column_aliasContext(Context, State);
		EnterRule(_localctx, 14, RULE_column_alias);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 130; Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Column_nameContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(SQLParser.IDENTIFIER, 0); }
		public Column_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_column_name; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISQLVisitor<TResult> typedVisitor = visitor as ISQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitColumn_name(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Column_nameContext column_name() {
		Column_nameContext _localctx = new Column_nameContext(Context, State);
		EnterRule(_localctx, 16, RULE_column_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132; Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Ordering_termContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode K_ASC() { return GetToken(SQLParser.K_ASC, 0); }
		public ITerminalNode K_DESC() { return GetToken(SQLParser.K_DESC, 0); }
		public Ordering_termContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ordering_term; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISQLVisitor<TResult> typedVisitor = visitor as ISQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrdering_term(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Ordering_termContext ordering_term() {
		Ordering_termContext _localctx = new Ordering_termContext(Context, State);
		EnterRule(_localctx, 18, RULE_ordering_term);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 134; expression(0);
			State = 136;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==K_ASC || _la==K_DESC) {
				{
				State = 135;
				_la = TokenStream.LA(1);
				if ( !(_la==K_ASC || _la==K_DESC) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Table_nameContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(SQLParser.IDENTIFIER, 0); }
		public Table_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_table_name; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISQLVisitor<TResult> typedVisitor = visitor as ISQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTable_name(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Table_nameContext table_name() {
		Table_nameContext _localctx = new Table_nameContext(Context, State);
		EnterRule(_localctx, 20, RULE_table_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138; Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	 
		public ExpressionContext() { }
		public virtual void CopyFrom(ExpressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Expression_columnContext : ExpressionContext {
		public Column_nameContext column_name() {
			return GetRuleContext<Column_nameContext>(0);
		}
		public Table_nameContext table_name() {
			return GetRuleContext<Table_nameContext>(0);
		}
		public Expression_columnContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISQLVisitor<TResult> typedVisitor = visitor as ISQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression_column(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Expression_equalityContext : ExpressionContext {
		public IToken Operator;
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public Expression_equalityContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISQLVisitor<TResult> typedVisitor = visitor as ISQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression_equality(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Expression_literalContext : ExpressionContext {
		public Literal_valueContext literal_value() {
			return GetRuleContext<Literal_valueContext>(0);
		}
		public Expression_literalContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISQLVisitor<TResult> typedVisitor = visitor as ISQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression_literal(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		return expression(0);
	}

	private ExpressionContext expression(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ExpressionContext _localctx = new ExpressionContext(Context, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 22;
		EnterRecursionRule(_localctx, 22, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 148;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NUMBER_LITERAL:
			case STRING_LITERAL:
				{
				_localctx = new Expression_literalContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
